# fact-checking-agent

./: .env.example  .gitignore  253563.json  PromptH.py  README.md  config.py  config.yaml  evaluate.py  evidence_extraction.py  evidence_verifier.py  fetch_test.py  get_prediction.py  get_predition.py  output.json  pyproject.toml  run.py  run_pipeline.py  simple_predict.py  test_ollama_client.py  utils.py
eval/: evaluate.py
eval/main_result/: CFEVER_64_3cls.json  TFC_10.json  llm_with_search.json
eval/main_result/CFEVER/: CFEVER_64_2cls_with_fetch.json  serp_only.json  simple_prediciton.json
eval/main_result/with_fetch/: RAWFC_100.json
modules/: agent_setup.py  config_loader.py  message_generator.py  parsers.py  paths.py  serp.py  utils.py  web_crawl.py
naive_llm_method/: predict_with_search.py
prompt/: Evidence_Extraction_Iterative_en  Evidence_Extraction_ch  Evidence_Extraction_en  Evidence_Extractor_System  Evidence_Extractor_System_zh  Evidence_Extractor_User  Evidence_Extractor_User_zh  Evidence_Verifier_ch  Evidence_Verifier_en  Fact_Checker_M_ch  Fact_Checker_M_en  Fact_Checker_N_2c_en  Fact_Checker_N_ch  Fact_Checker_N_en  Fact_Checker_P_2c_en  Fact_Checker_P_ch  Fact_Checker_P_en  Finalizer_ch  Finalizer_en  PromptH.py  Synthesizer_ch  Synthesizer_en
tools/: __init__.py  __main__.py  client.py  fetch.py  search.py
