[project]
name = "delphiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ag2[openai]>=0.9.6",
    "autogen>=0.9.6",
    "autogen-agentchat~=0.2",
    "crawl4ai>=0.7.0",
    "mistune>=3.1.3",
    "readability-lxml>=0.8.4.1",
    "trafilatura>=2.0.0",
]
