[project]
name = "delphiagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen-agentchat~=0.2",
    "openai>=1.0.0",
    "crawl4ai>=0.7.0",
    "mcp-server-fetch>=2025.1.17",
    "mistune>=3.1.3",
    "readability-lxml>=0.8.4.1",
    "trafilatura>=2.0.0",
    "autogen>=0.9.6",
]
